# TorJniJava

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alloc64/torlib/: BasicTorSampleActivity.java  DisposeTestActivity.java  MainActivity.java
app/src/main/java/com/alloc64/torlib/samples/: BasicTorSample.java
app/src/main/java/org/zeroprism/: MainActivity.java
app/src/main/res/layout/: activity_dispose_test.xml  activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
torAppTest/src/main/: AndroidManifest.xml
torAppTest/src/main/java/com/alloc64/torlib/: BasicTorSampleActivity.java  DisposeTestActivity.java  VpnTorActivity.java
torAppTest/src/main/res/layout/: activity_dispose_test.xml  activity_main.xml  activity_vpn_tor.xml
torLib/: build.gradle  consumer-rules.pro
torLib/src/main/: AndroidManifest.xml
torLib/src/main/cpp/: CMakeLists.txt  JNIAware.cpp  JNIAware.h  JNILogger.h  JNIRegistrar.cpp  JNIRegistrar.h  Logger.cpp  Logger.h  LoggerTypedef.c  LoggerTypedef.h  PdnsdClient.cpp  PdnsdClient.h  Thread.cpp  Thread.h  TorClient.cpp  TorClient.h  Tun2SocksClient.cpp  Tun2SocksClient.h
torLib/src/main/cpp/pdnsd/: pdnsd_client.c  pdnsd_client.h
torLib/src/main/cpp/tor/: tor_api.h
torLib/src/main/cpp/tun2socks/: tun2socks_client.c
torLib/src/main/java/com/alloc64/http/: ProxiedSocketFactory.java  TorOkhttp3.java
torLib/src/main/java/com/alloc64/jni/: JNIBridge.java  JNITrampoline.java  TLJNIBridge.java
torLib/src/main/java/com/alloc64/torlib/: ArgConfig.java  JNITrampoline.java  PdnsdConfig.java  TorConfig.java
torLib/src/main/java/com/alloc64/torlib/control/: Bytes.java  PasswordDigest.java  TorAbstractControlSocket.java  TorControlCommands.java  TorControlConnection.java  TorControlError.java  TorControlSocket.java  TorEventSocket.java
torLib/src/main/java/com/alloc64/torlib/utils/: TorUtils.java
torTransportLib/: build.gradle
torTransportLib/src/main/: AndroidManifest.xml
torTransportLib/src/main/cpp/: CMakeLists.txt  JNIAware.cpp  JNIAware.h  JNIRegistrar.cpp  JNIRegistrar.h  Logger.cpp  PdnsdClient.cpp  PdnsdClient.h  ProcessInThread.cpp  ProcessInThread.h  TorClient.cpp  TorClient.h  Tun2SocksClient.cpp  Tun2SocksClient.h  org_zeroprism_PDNSd.cpp  org_zeroprism_Pdnsd.h  org_zeroprism_Transport.cpp  org_zeroprism_Transport.h  org_zeroprism_Tun2Socks.cpp  org_zeroprism_Tun2Socks.h
torTransportLib/src/main/cpp/pdnsd/: pdnsd_client.c  pdnsd_client.h
torTransportLib/src/main/cpp/tun2socks/: tun2socks_client.c  tun2socks_client.h
torTransportLib/src/main/java/org/zeroprism/: JNIBridge.java  JNITrampoline.java  Transport.java
torTransportLib/src/main/java/org/zeroprism/http/: ProxiedSocketFactory.java  TorOkhttp3.java
torVpnLib/: build.gradle
torVpnLib/src/main/: AndroidManifest.xml
torVpnLib/src/main/java/com/alloc64/vpn/: IVPNService.java  IVpnService.java  TLVpnService.java  VPNConnectionState.java  VPNError.java  VPNMessageTypes.java  VpnConnectionState.java  VpnError.java  VpnException.java  VpnMessageTypes.java
torVpnLib/src/main/java/com/alloc64/vpn/client/: AbstractVPNClient.java  AbstractVpnClient.java  TLVpnClient.java  VPNClient.java  VpnClient.java
torVpnLib/src/main/java/com/alloc64/vpn/messenger/: BasicMessage.java  ConnectionRequestMessage.java  ConnectionStateMessage.java  IBasicMessage.java  ProtoconfidConnectionStateMessage.java  ReplyHandler.java  ServiceIncomingMessageHandler.java
torVpnLib/src/main/java/com/alloc64/vpn/tor/: SocksServerTunInterface.java  TorVpnProvider.java
torVpnLib/src/main/java/com/alloc64/vpn/tun/: TunConfig.java
torVpnLib/src/main/java/com/runjva/sourceforge/jsocks/protocol/: Authentication.java  AuthenticationNone.java  InetRange.java  ProxyMessage.java  ProxyServer.java  Socks4Message.java  Socks4Proxy.java  Socks5DatagramSocket.java  Socks5Message.java  Socks5Proxy.java  SocksException.java  SocksProxyBase.java  SocksServerSocket.java  SocksSocket.java  UDPEncapsulation.java  UDPRelayServer.java  UserPasswordAuthentication.java
torVpnLib/src/main/java/com/runjva/sourceforge/jsocks/server/: Ident.java  IdentAuthenticator.java  ServerAuthenticator.java  ServerAuthenticatorBase.java  ServerAuthenticatorNone.java  UserPasswordAuthenticator.java  UserValidation.java
